--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@tanstack/react-router": "^1.112.18",
         "classnames": "^2.5.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -18,6 +19,8 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
+        "@tanstack/router-devtools": "^1.112.18",
+        "@tanstack/router-plugin": "^1.113.0",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
         "@vitejs/plugin-react": "^4.3.4",
