--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,5 @@
     "[javascript][javascriptreact][typescript][typescriptreact][json][jsonc][html][css]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    "cSpell.words": ["Arcanism", "Arcanist", "fabula", "gmkit"]
+    "cSpell.words": ["Arcanism", "Arcanist", "eleri", "fabula", "gmkit", "zatari"]
 }
