--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
     "[javascript][javascriptreact][typescript][typescriptreact][json][jsonc][html][css]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    "cSpell.words": ["arcanism", "arcanist", "chimerist", "eleri", "fabula", "gmkit", "zatari"],
+    "cSpell.words": ["arcanism", "arcanist", "Chimerism", "chimerist", "eleri", "fabula", "gmkit", "zatari"],
     "files.exclude": {
         "**/.git": true,
         "**/.svn": true,
