Remove dead links for now

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "gmkit",
         "loremaster",
         "spiritist",
+        "tabler",
         "weaponmaster",
         "zatari"
     ],
